# gnl

./: .gitignore  CMakeLists.txt  README.md  get_next_line.c  get_next_line.h
libft/: Makefile
